--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="container">
       <div id="profile">
         <img src="./assets/avatar.png"
-          alt="Foto de Luis Willer com o chapel tradicional da Tirolerfest"/>
+          alt="Logo desenvolvida pela Willer"/>
         <p>@luiswiller</p>
       </div>
       <div id="switch" onclick="toggleMode()">
