--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       <ul>
         <li>
-          <a href="#">Inscrever-se na Willer</a>
+          <a href="./form.html">Inscrever-se na Willer</a>
         </li>
         <li>
           <a href="#">Baixar meu e-book</a>
